	- switching views now corectly activates the files too (but makes
	  projectviewer depended on jedit 4.1)
	- switching the trees via the tabs, keeps the cur. file active in the trees
	- removed obsolete action.xml
	- use new RolloverButton class of jEdit 4.1
	- use jEdit 4.1 icons for toolbar and trees
	- use bold font for folders/projects (like Filesystembrowser does)

VERSION 1.0.4
  [stefan kost]
    - open files are now visualized underlined like the filesystem-browser does.
    - updated docs

VERSION 1.0.4
  [dale anson]
    - improved persistence of project files
    - added ability to designate a file as a "build file" for the project. This
	  will notify registered listeners that may be interested when the project
	  changes.
    - added persistence of the state of the folder tree so that it will automa-
	  tically expand to where it was when the project was last used.
 
VERSION 1.0.4

  [marcelo vanzin]
    - changed configuration file layout. Each project has its own configuration
      file now (under projects/). Project configuration is "lazy loaded" (loaded
      only when needed).
      
    - added configuration panel to jEdit configuration dialog and added config
      class holding all configuration data for the plugin. Also, added some
      configuration options.
      
    - added properties dialog for projects, used to create new project and to
      modify existing ones.
      
    - added context menus to the trees, and implemented multiple selections in
      the tree (only in single project view). Remove buttons and context menu
      entries now can handle multiple selections.
      
    - opened files are remembered on a per-project basis. Also, the last opened
      project is remembered between jEdit sessions.
      
    - Lots of small changes/fixes.

  [stefan kost]
   - fixed bug when importing files from dirs not below project root
   
   
VERSION 1.0.3

  [stefan kost]